--- a/bigtop-tests/test-artifacts/sqoop2/pom.xml
+++ b/bigtop-tests/test-artifacts/sqoop2/pom.xml
@@ -28,14 +28,18 @@
   </parent>
 
   <groupId>org.apache.bigtop.itest</groupId>
-  <artifactId>sqoop-smoke</artifactId>
+  <artifactId>sqoop2-smoke</artifactId>
   <version>0.9.0-SNAPSHOT</version>
   <name>sqoopsmokes</name>
 
   <dependencies>
       <dependency>
           <groupId>org.apache.sqoop</groupId>
-          <artifactId>sqoop</artifactId>
+          <artifactId>sqoop-core</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.sqoop</groupId>
+          <artifactId>sqoop-client</artifactId>
       </dependency>
   </dependencies>
 
