--- a/pom.xml
+++ b/pom.xml
@@ -234,12 +234,12 @@
       <dependency>
         <groupId>org.apache.sqoop</groupId>
         <artifactId>sqoop-core</artifactId>
-        <version>${sqoop.version}</version>
+        <version>${sqoop2.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.sqoop</groupId>
         <artifactId>sqoop-client</artifactId>
-        <version>${sqoop.version}</version>
+        <version>${sqoop2.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
