--- a/bigtop-tests/test-artifacts/sqoop/pom.xml
+++ b/bigtop-tests/test-artifacts/sqoop/pom.xml
@@ -36,6 +36,7 @@
       <dependency>
           <groupId>org.apache.sqoop</groupId>
           <artifactId>sqoop</artifactId>
+          <classifier>${sqoop.classifier}</classifier>
       </dependency>
   </dependencies>
 
