BIGTOP-1739: Fix Sqoop dependencies for top level pom and test-artifact

--- a/bigtop-tests/test-artifacts/pom.xml
+++ b/bigtop-tests/test-artifacts/pom.xml
@@ -40,6 +40,7 @@
     <module>hbase</module>
     <module>flume</module>
     <module>sqoop</module>
+    <module>sqoop2</module>
     <module>mahout</module>
     <module>giraph</module>
     <module>hue</module>
